--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
   "description": "Journal",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server"
   },
   "author": "Steve Davis <steve@celery.club>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
+    "streamqueue": "^1.1.1",
+    "through2": "^2.0.3",
+    "tiny-lr": "^1.0.4"
+  }
 }
