--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
     "streamqueue": "^1.1.1",
     "through2": "^2.0.3",
     "tiny-lr": "^1.0.4"
