Add angular and angular-route to vendor directory

--- a/manifest.json
+++ b/manifest.json
@@ -17,10 +17,10 @@
 
   "javascripts": [
     {
-      "base": "lib",
+      "base": "vendor",
       "files": [
-        "lib/angular.js",
-        "lib/*.js"
+        "vendor/angular.js",
+        "vendor/*.js"
       ]
     },
     {
