--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Lido",
-  "main": "server.js",
+  "main": "server",
   "scripts": {
     "start": "node server"
   },
