--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,12 @@
 
   "templates": [
     {
+      "base": ".",
+      "files": [
+        "index.html"
+      ]
+    },
+    {
       "base": "app",
       "files": [
         "app/templates/**/*.html"
