--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .DS_Store
-node_modules
-public/assets
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
