--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lido-web",
-  "description": "Lido",
+  "description": "Lido Web",
   "version": "1.0.0",
   "author": "Steve Davis <steve@celery.club>",
   "license": "ISC",
@@ -15,19 +15,19 @@
     "not ie <= 8"
   ],
   "dependencies": {
-    "vue": "^2.4.4"
+    "vue": "^2.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "file-loader": "^1.1.5",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.3",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
