--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "not ie <= 8"
   ],
   "dependencies": {
-    "vue": "^2.5.3"
+    "vue": "^2.5.3",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
