--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-loader": "^13.5.0",
     "vue-template-compiler": "^2.5.4",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "webpack-s3-plugin": "^1.0.0-rc.0"
   }
 }
