--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lido-web",
   "description": "Lido Web",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "author": "Steve Davis <steve@celery.club>",
   "license": "ISC",
   "private": true,
@@ -15,22 +15,25 @@
     "not ie <= 8"
   ],
   "dependencies": {
-    "vue": "^2.5.13",
-    "vue-codemirror-lite": "^1.0.3",
+    "vue": "^2.5.16",
+    "vue-codemirror-lite": "^1.0.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.6",
-    "vue-loader": "^13.6.0",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.12.0",
+    "webpack-dev-server": "^3.1.4",
     "webpack-s3-plugin": "^1.0.0-rc.0"
+  },
+  "engines": {
+    "node": "^10.0.0"
   }
 }
