--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6",
     "webpack-dev-server": "^3.1.4",
     "webpack-s3-plugin": "^1.0.0-rc.0"
   },
