--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.6",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-s3-plugin": "^1.0.0-rc.0"
+    "webpack-dev-server": "^3.1.4"
   },
   "engines": {
     "node": "^10.0.0"
