--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "ISC",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production --progress --hide-modules"
   },
   "browserslist": [
     "> 1%",
@@ -24,13 +24,12 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.6",
+    "webpack": "^4.12.1",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
   "engines": {
